--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,15 @@ spring.application.name=demo
 server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
+spring.datasource.url=jdbc:mysql://localhost:3306/approval_portal
+spring.datasource.username=root
+spring.datasource.password=Amypo
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.port=8080
+
 
 
