--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,15 @@
 spring.application.name=demo
-# Don't change the port
-server.port = 9001
-# for https
-server.forward-headers-strategy=framework 
+
+# Server
+server.port=9001
+server.forward-headers-strategy=framework
+
+# Database
 spring.datasource.url=jdbc:mysql://localhost:3306/approval_portal
 spring.datasource.username=root
 spring.datasource.password=Amypo
 
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-server.port=8080
-
-
-
