--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.application.name=demo
 
-# Server
+# Server port (use ONE port only)
 server.port=9001
-server.forward-headers-strategy=framework
 
-# Database
+# Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/approval_portal
 spring.datasource.username=root
 spring.datasource.password=Amypo
 
-# JPA / Hibernate
+# JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
