--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=demo
-
-# Server port (use ONE port only)
-server.port=9001
-
-# Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/approval_portal
+# Don't change the port
+server.port = 9001
+# for https
+server.forward-headers-strategy=framework 
+spring.datasource.url=jdbc:mysql://localhost:3306/optimizer?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
-
-# JPA configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
