--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=demo
-# Don't change the port
-server.port = 9001
-# for https
-server.forward-headers-strategy=framework 
-spring.datasource.url=jdbc:mysql://localhost:3306/workflow?createDatabaseIfNotExist=true
+
+server.port=8080
+server.forward-headers-strategy=framework
+
+spring.datasource.url=jdbc:mysql://localhost:3306/approval_workflow?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
