--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 spring.application.name=demo
 
-server.port=9001
-server.forward-headers-strategy=framework 
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 
-spring.datasource.url=jdbc:mysql://localhost:3306/workflow?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Amypo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# JPA/Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.open-in-view=false
+# H2 Console (for debugging)
+spring.h2.console.enabled=true
+
+# Security
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
