--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,17 @@ spring.application.name=demo
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
 # JPA/Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 # H2 Console (for debugging)
 spring.h2.console.enabled=true
 
-# Security
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=ADMIN
+# Logging
+logging.level.org.springframework.security=WARN
+logging.level.org.hibernate=WARN
