--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=demo
 
 # H2 Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.dri`verClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
