--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,11 @@
 spring.application.name=demo
-
-# H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.dri`verClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# JPA/Hibernate properties
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-
-# H2 Console (for debugging)
-spring.h2.console.enabled=true
-
-# Logging
-logging.level.org.springframework.security=WARN
-logging.level.org.hibernate=WARN
+# Don't change the port
+server.port = 9001
+# for https
+server.forward-headers-strategy=framework 
+spring.datasource.url=jdbc:mysql://localhost:3306/Workflow?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
